Allow to send data to pipeline

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 SEISMOGRAPH_SERVER_IP="localhost"
 SEISMOGRAPH_STORAGE_METHOD="file"
+
+# TODO: use a more descriptive name here, maybe producer: file, sensor
 SEISMOGRAPH_CONNECTION_TYPE="server"
+SEISMOGRAPH_PIPELINE_BACKEND_URL="192.168.67.23:4000"
+SEISMOGRAPH_HOST_IP="192.168.67.23"
+SEISMOGRAPH_LOCATION="somewhere-over-the-rainbow"
