Change example env to contain SERVER_PORT variable

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ SEISMOGRAPH_STORAGE_METHOD="file"
 # TODO: use a more descriptive name here, maybe producer: file, sensor
 SEISMOGRAPH_CONNECTION_TYPE="server"
 SEISMOGRAPH_PIPELINE_BACKEND_URL="192.168.67.23:4000"
+SEISMOGRAPH_SERVER_PORT="20001"
 SEISMOGRAPH_HOST_IP="192.168.67.23"
 SEISMOGRAPH_LOCATION="somewhere-over-the-rainbow"
